Fixed tag overview dark mode

--- a/packages/web/src/modules/ui/components/form/styles/form.css
+++ b/packages/web/src/modules/ui/components/form/styles/form.css
@@ -36,6 +36,11 @@
     opacity: 0.3;
 }
 
+.dark [type="checkbox"]:not(:checked),
+[type="radio"]:not(:checked) {
+    opacity: 0.4;
+}
+
 [type="checkbox"]:disabled,
 [type="radio"]:disabled {
     opacity: 0.3;
